--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8">
-  <title>Project 2</title>
+  <title>Tech Blog</title>
   <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
@@ -8,35 +8,19 @@
       crossorigin="anonymous"/>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
-  <div class="container-fluid p-0">
-    <header>
-      <nav id="nav-bar" class="navbar navbar-expand-sm navbar-light bg-light">
-        {{!-- <a class="navbar-brand" href="#">Tech-Blog</a> --}}
-        <a class="navbar-brand" href="#">
-          <img src="/images/bootstrap-solid.svg" width="30" height="30" alt="logo">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="#">Dashboard</a>
-            <a class="nav-link" href="#">Login</a>
-          </div>
-        </div>
-      </nav>
-    </header>
-      <main class="container-fluid">
+  <div class="layout">
+      <main class="container-fluid p-0">
         {{{ body }}}
       </main>
   </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  {{!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> --}}
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
       crossorigin="anonymous"></script>
+      <script src="/js/user.js"></script>
   </body>
 </html>
