added controllers and views

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,7 @@
 {{> nav}}
 <section class="container-fluid">
   <h1>Dashboard</h1>
+  {{> post}}
+  <button> New Post</button>
+  <script src="/js/post.js"></script>
 </section>
