--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,3 +8,35 @@ body {
   min-height: 100vh;
   width: 100%;
 }
+
+#post-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0;
+  /* justify-content: space-between;
+  align-items: baseline; */
+}
+
+#post-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+  width: 100%;
+  /* border: 1px solid grey; */
+  color: white;
+  background-color: #3b302e;
+  gap: 1rem;
+  padding: 0.5rem;
+}
+
+#post-user-time {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+/* #post-list {
+  margin: 1rem;
+  border: 1px solid grey;
+} */
