--- a/views/partials/one-post.handlebars
+++ b/views/partials/one-post.handlebars
@@ -1,17 +1,16 @@
 {{> nav}}
-<section class="container-fluid d-flex flex-column justify-content-center align-items-center">
-  <form id="sign-up-form" class="row col-sm-11 col-md-6 col-lg-col-4">
-      <h1>Sign Up</h1>
+  <form id="new-comment-form" class="row col-sm-11 col-md-6 col-lg-col-4">
+      <h1>Login</h1>
     <div class="form-group row">
       <label for="username" class="col-sm-2 col-form-label">Username</label>
       <div class="col-sm-10">
-        <input type="input" class="form-control" id="username-input" />
+        <input value="Frodo" type="input" class="form-control" id="username-input" />
       </div>
     </div>
     <div class="form-group row">
       <label for="password" class="col-sm-2 col-form-label">Password</label>
       <div class="col-sm-10">
-        <input type="password" class="form-control" id="password-input" />
+        <textarea type="content" class="form-control" id="password-input" />
       </div>
     </div>
     <div class="form-group row">
@@ -19,7 +18,6 @@
         <button type="submit" class="btn btn-primary">Sign in</button>
       </div>
     </div>
-    <a href="/login">Login instead</a>
+    <a href="/sign-up">Sign up instead</a>
   </form>
 </section>
-<script src="/js/signUp.js"></script>
